# gis-mcp

./: .gitignore  .gitignore.txt  README.md  mkdocs.yml  pyproject.toml
.cursor/: mcp.json.txt
.github/workflows/: mkdocs-deploy.yml
docs/: getting-started.md  index.md
docs/api/geopandas/: README.md
docs/api/pyproj/: README.md
docs/api/pysal/: README.md
docs/api/rasterio/: README.md
docs/api/shapely/: README.md
docs/data-gathering/: README.md  ecology.md  movement.md
docs/examples/: README.md  basic_spatial_analysis_claude.md  crs_area_distance_analysis.md  movement_example.md
docs/install/: cloud.md  developers.md  pip-uv-conda.md  pip.md
docs/showcases/: programmers.md  researcher.md  technicians.md
src/gis_mcp/: __init__.py  geopandas_functions.py  main.py  pyproj_functions.py  pysal_functions.py  rasterio_functions.py  shapely_functions.py
src/gis_mcp/data/: administrative_boundaries.py  movement.py
src/gis_mcp/tools/: pyproj_ops.py  shapely_ops.py
