[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "gis-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server implementation for GIS operations using GIS libraries"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Mahdi Nazari Ashani"},
    {name = "GIS MCP Contributors"},
]
keywords = ["mcp", "gis", "llm", "geospatial", "ogc", "pyproj", "shapely", "rasterio"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "mcp==1.6.0",
    "numpy>=1.23,<2.0",
    "shapely>=2.1.0",
    "pyproj>=3.7.1",
    "rasterio==1.3.9",
    "fiona==1.9.6",
    "geopandas==1.0.0"
]


[project.scripts]
gis-mcp = "gis_mcp.main:main"

[tool.hatch.metadata]
allow-direct-references = true