[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "gis-mcp"
version = "0.1.0"
description = "GIS Multi-Criteria Processing tool"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Mahdi Nazari Ashani"},
    {name = "GIS MCP Contributors"},
]
keywords = ["mcp", "gis", "llm", "geospatial", "ogc", "pyproj", "shapely"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "mcp==1.6.0",
    "shapely>=2.1.0",
    "pyproj>=3.6.0",
    "pandas>=2.0.0",
    "geopandas>=0.13.0",
    "tabulate>=0.9.0",
]


[project.scripts]
gis-mcp = "gis_mcp.main:main"

[tool.hatch.metadata]
allow-direct-references = true